Run benchmarks with PGO